--- a/html/css/main.css
+++ b/html/css/main.css
@@ -8,6 +8,7 @@ body {
   font-optical-sizing: auto;
   font-weight: 300;
   font-style: normal;
+  -webkit-overflow-scrolling: auto;
 }
 
 body {
@@ -462,6 +463,17 @@ a {
   flex: 0;
 }
 
+@media (max-width: 1099px) {
+  body {
+    max-height: 100svh;
+    min-height: 100svh;
+    overflow-y: hidden;
+  }
+  .root-container {
+    max-height: 100svh;
+    min-height: 100svh;
+  }
+}
 @media (min-width: 1100px) {
   .root-container {
     gap: 15px;
